# ml-agents-box

./: pyproject.toml  trainer_config_old.yaml
Project/Assets/ML-Agents/Examples/PushBlock/Models/: v_001_PushBlockCollab.onnx
Project/Assets/ML-Agents/Examples/PushBlock/Prefabs/: PushBlockAgentGridCollab.prefab  PushBlockCollabAgainstAreaGrid.prefab  PushBlockCollabAreaGrid.prefab
Project/Assets/ML-Agents/Examples/PushBlock/Scenes/: PushBlockCollab.unity  PushBlockCollabSettings.lighting
Project/Assets/ML-Agents/Examples/PushBlock/Scripts/: GoalDetect.cs  GoalDetectTrigger.cs  PushBlockEnvController.cs
Project/Assets/ML-Agents/Examples/SharedAssets/Materials/: AgentPurple.mat  BlueGoal.mat  Green.mat  YellowGoal.mat
Project/ProjectSettings/: TagManager.asset
trainers_configs/: trainer_config.yaml
